<resources>
    <string name="app_name">Project 3</string>
    <string name="_55">5</string>
    <string name="_44">4</string>
    <string name="_33">3</string>
    <string name="_22">2</string>
    <string name="_00">0</string>
    <string name="_8">8</string>
    <string name="pos_or_neg">+/-</string>
    <string name="_6">6</string>
    <string name="multi">X</string>
    <string name="div">/</string>
    <string name="percent">%</string>
    <string name="equal">=</string>
    <string name="deci">.</string>
    <string name="clear">AC</string>
    <string name="_99">9</string>
    <string name="sub">-</string>
    <string name="_77">7</string>
    <string name="plus">+</string>
    <string name="_11">1</string>
    <string name="Sum"></string>
    <string name="Equation"></string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="decimal2">.</string>
    <string name="_1">1</string>
    <string name="ac">AC</string>
    <string name="_9">9</string>
    <string name="_88">8</string>
    <string name="_66">6</string>
    <string name="equals">=</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="x">X</string>
    <string name="add">+</string>
    <string name="_2">2</string>
    <string name="sum"></string>
    <string name="equation"></string>
    <string name="divide">/</string>
    <string name="perc">%</string>
    <string name="pos">+/-</string>
    <string name="divid">/</string>
    <string name="pos_neg">+/-</string>
    <string name="positive_negative">+/-</string>
    <string name="decimal">.</string>
</resources>
