<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="380dp"
        android:layout_height="475dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="380dp"
            android:layout_height="95dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/AC"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="AC"
                android:text="@string/ac"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/plus_minus"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="posneg"
                android:text="@string/pos_neg"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/percent"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="perc"
                android:text="@string/perc"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/div"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="divide"
                android:text="@string/div"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="380dp"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="seven"
                android:text="@string/_7"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eight"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="eight"
                android:text="@string/_8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nine"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="nine"
                android:text="@string/_9"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/X"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="multi"
                android:text="@string/x"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="380dp"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="four"
                android:text="@string/_4"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/five"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="five"
                android:text="@string/_5"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/six"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="six"
                android:text="@string/_6"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/minus"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="min"
                android:text="@string/minus"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="380dp"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="one"
                android:text="@string/_1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/two"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="two"
                android:text="@string/_2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="three"
                android:text="@string/_3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/plus"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="plu"
                android:text="@string/plus"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="380dp"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                android:layout_width="190dp"
                android:layout_height="95dp"
                android:onClick="zero"
                android:text="@string/_0"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/decimal"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="decimal"
                android:text="@string/deci"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equals"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:onClick="equal"
                android:text="@string/equals"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/Sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Equation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/equation"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/Sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>